begining trainee level leasons

--- a/beginer_level/Nginx_1.17_server.conf
+++ b/beginer_level/Nginx_1.17_server.conf
@@ -159,7 +159,7 @@ listen                        %ip%:%httpsport% ssl http2;
 
 root                          '%sprogdir%/modules/system/html/default';
 limit_conn                    addr 64;
-autoindex                     on;
+autoindex                     off;
 index                         index.php index.html index.htm;
 
 ssl_certificate               '%sprogdir%/userdata/config/cert_files/server.crt';
