--- a/beginer_level/Nginx_1.17_vhost.conf
+++ b/beginer_level/Nginx_1.17_vhost.conf
@@ -8,10 +8,10 @@ listen                        %ip%:%httpport%;
 listen                        %ip%:%httpsport% ssl http2;
 
 server_name                   %host% %aliases%;
-root                          '%hostdir%/trainee_level/';
-#root                          '%hostdir%';
+#root                          '%hostdir%/public';
+root                          '%hostdir%';
 limit_conn                    addr 64;
-autoindex                     on;
+autoindex                     off;
 index                         index.php index.html index.htm;
 
 ssl_certificate               '%sprogdir%/userdata/config/cert_files/server.crt';
