--- a/Nginx_1.17_vhost.conf
+++ b/Nginx_1.17_vhost.conf
@@ -8,7 +8,7 @@ listen                        %ip%:%httpport%;
 listen                        %ip%:%httpsport% ssl http2;
 
 server_name                   %host% %aliases%;
-root                          '%hostdir%/trainee_level/';
+root                          '%hostdir%/public/';
 #root                          '%hostdir%';
 limit_conn                    addr 64;
 autoindex                     on;
@@ -49,7 +49,7 @@ location ~* ^.+\.(?:css(\.map)?|js(\.map)?|jpe?g|png|gif|ico|cur|heic|webp|tiff?
 
 location / {
     # Force index.php routing (if not found)
-    # try_files $uri $uri/ /index.php?$query_string;
+    try_files $uri $uri/ /index.php?$query_string;
 
     # Force index.php routing (all requests)
     # rewrite ^/(.*)$ /index.php?/$1 last;
